2011-06-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/gplt_x11.c src/plot2d.c src/set.c src/util.c:
	Remove dead code sections. Most of these have been commented out for
	many years.

2011-06-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/getcolor.c (quantize_gray)): Remove a possible discontinuity at
	the boundary of defined palettes with a small number of segments.
	Bug #3317746

2011-06-17  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/time.c (gstrptime):  The correction for the difference in epochs
	(2000 - 1970) was incorrect when reading times in %s format.
	Bug #3163386

2011-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (z2cb): If cb is log-scale, then limit result to positive
	values.
	Bug #3316616

2011-06-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_histeps): Allow data points with y=0 even if log
	scaling is active.
	Bug #3316112

2011-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Reset line and text colors at the start of each plot.

	* config/config.cyg config/config.dj2 config/config.mgw config/config.nt
	config/config.os2 config/config.oww config/makefile.dj2 
	config/makefile.emx config/makefile.unx config/makefile.vms
	docs/doc2texi.el docs/Makefile.in docs/term-ja.diff
	src/makefile.all src/makefile.awc src/show.c src/term.c src/term.h
	configure.in configure.vms INSTALL PORTING NEWS
	term/gnugraph.trm term/unixplot.trm:

	Remove obsolete terminal drivers gnugraph and unixplot. The underlying
	gnu plotutils library is itself more than 10 years out of date (last
	release July 2000) and the terminal drivers haven't been upgraded for
	longer than that. In any event, current gnuplot has better native terminal
	drivers for the devices supported by unixplot/gnugraph.

2011-05-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open df_determine_matrix_info):
	Add a keyword '[s]plot ... nonuniform matrix'